--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,10 +15,17 @@
 		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")">
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap-theme.min.css")">
+		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap-datepicker.min.css")">
 		<!--  JQuery scripts - needed by the bootstrap js content -->
 		<script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
+		<!-- Moment js -->
+		<script src="@routes.Assets.at("javascripts/moment.js")"></script>
+		<!-- Date Picker -->
+		<script src="@routes.Assets.at("javascripts/bootstrap-datetimepicker.js")"></script>
+		<!-- Date Picker -->
+		<script src="@routes.Assets.at("javascripts/pl.js")"></script>
     </head>
     <body>
     	@if(flash.containsKey("success")){
