--- a/app/views/courses/courseDetails.scala.html
+++ b/app/views/courses/courseDetails.scala.html
@@ -17,7 +17,7 @@
 						<div class="col-md-6">
 					   		<span class="pull-right">
 					    		<a rel="tooltip" title="Powrót bez zapisywania zamian" class="btn btn-danger" href="@routes.Courses.getCourses()">Powrót</a> 
-								<input rel="tooltip" title="Zapisz zmiany w kursie" type="submit" class="btn btn-primary" value="Zapisz kurs">
+								<input rel="tooltip" title="Zapisz zmiany w kursie" type="submit" class="btn btn-primary" value="Zapisz">
 					    	</span>
 						</div>
 					</div>
