--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,17 +15,13 @@
 		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")">
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap-theme.min.css")">
-		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap-datepicker.min.css")">
+		<link rel="stylesheet" href="@routes.Assets.at("stylesheets/datepicker.css")">
 		<!--  JQuery scripts - needed by the bootstrap js content -->
 		<script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
-		<!-- Moment js -->
-		<script src="@routes.Assets.at("javascripts/moment.js")"></script>
-		<!-- Date Picker -->
-		<script src="@routes.Assets.at("javascripts/bootstrap-datetimepicker.js")"></script>
-		<!-- Date Picker -->
-		<script src="@routes.Assets.at("javascripts/pl.js")"></script>
+		<script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")"></script>
+		
     </head>
     <body>
     	@if(flash.containsKey("success")){
@@ -148,7 +144,7 @@
 		        
 		        @if((session.get("role") == "SuperUser")){
 		        <!-- Defining the link for access the system settings -->
-		        <li><a @if(!navbarDisabled){ href="/settings"}><i class="glyphicon glyphicon-cog"></i></a></li><!-- Displaying the settings panel -->
+		        <li><a rel="tooltip" title="Ustawienia systemu" @if(!navbarDisabled){ href="/settings"}><i class="glyphicon glyphicon-cog"></i></a></li><!-- Displaying the settings panel -->
 		      	}
 		      </ul>
 		      
@@ -159,7 +155,12 @@
 		
    
         @content
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
+        <script>
+	        $(document).ready(function(){
+			    $("[rel=tooltip]").tooltip({ placement: 'bottom'});
+			});
+        </script>
     </body>
 </html>
 
